--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url = jdbc:sqlite:sqlitesample.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+spring.jpa.hibernate.ddl-auto=update
+server.port=8085
