feat: add upload cover for title feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url = jdbc:sqlite:sqlitesample.db
 spring.datasource.driver-class-name = org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
 server.port=8085
+upload.directory=src/main/resources/static/upload
